--- a/styles/style.css
+++ b/styles/style.css
@@ -316,7 +316,7 @@
   display: flex;
   justify-content: center;
   gap: 40px;
-
+}
 .step {
   flex-direction: row;
   flex-basis: 220px;
@@ -340,41 +340,75 @@
 }
 
 .footer {
+  display: flex;
+  background-color: #1f1f1f;
+  color: #f1f1f1;
   box-sizing: border-box;
+  padding: 80px 60px 60px 80px;
+}
+
+.footer__cover {
+  width: 100%;
+  position: relative;
 }
 
 .footer__columns {
+  display: flex;
+  justify-content: space-between;
 }
-
 .footer__column_content_hours {
+  font-size: small;
+  position: absolute;
+  right: 250px;
+  margin-left: auto;
 }
 
 .footer__column_content_social {
+  font-size: small;
+  margin-left: 80px;
 }
 
 .footer__logo {
+  width: 58px;
+  height: 80px;
 }
 
 .footer__column-heading {
+  padding-bottom: 20px;
+  margin-top: 0;
+  font-weight: bold;
 }
 
 .footer__list {
-  /* El siguiente código elimina los estilos predeterminados del navegador para las listas */
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
 
 .footer__list-item {
+  padding-bottom: 0 16px 0 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 .footer__column-link {
+  display: flex;
   color: white;
   text-decoration: none;
+  column-gap: 10px;
+  align-items: center;
 }
 
 .footer__social-icon {
+  width: 16px;
+  height: 16px;
+  padding-right: 10px;
+  padding-bottom: 0;
 }
 
 .footer__copyright {
+  margin-top: 100px;
+  margin-top: 0;
+  font-size: small;
 }
