--- a/styles/style.css
+++ b/styles/style.css
@@ -342,9 +342,9 @@
 .footer {
   display: flex;
   background-color: #1f1f1f;
-  color: #f1f1f1;
+  color: #ffffff;
   box-sizing: border-box;
-  padding: 80px 60px 60px 80px;
+  margin: 80px 60px;
 }
 
 .footer__cover {
@@ -374,19 +374,17 @@
 }
 
 .footer__column-heading {
-  padding-bottom: 20px;
-  margin-top: 0;
+  margin-bottom: 20px;
   font-weight: bold;
 }
 
 .footer__list {
   list-style-type: none;
-  padding: 0;
   margin: 0;
 }
 
 .footer__list-item {
-  padding: 0 16px 0 0;
+  padding: 20px 16px 0 0;
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
@@ -403,12 +401,11 @@
 .footer__social-icon {
   width: 16px;
   height: 16px;
-  padding-right: 10px;
-  padding-bottom: 0;
+  margin-right: 10px;
+  margin-bottom: 0;
 }
 
 .footer__copyright {
   margin-top: 100px;
-  margin-top: 0;
   font-size: small;
 }
