project 3 html and css

--- a/styles/style.css
+++ b/styles/style.css
@@ -344,7 +344,7 @@
   background-color: #1f1f1f;
   color: #ffffff;
   box-sizing: border-box;
-  margin: 80px 60px;
+  padding: 60px 80px;
 }
 
 .footer__cover {
@@ -381,6 +381,7 @@
 .footer__list {
   list-style-type: none;
   margin: 0;
+  padding: 0;
 }
 
 .footer__list-item {
